syntax = "proto3";

package dolt.services.v1alpha1;

option go_package = "v1alpha1";

service CredentialsService {
  rpc WhoAmI(WhoAmIRequest) returns (WhoAmIResponse);
}

message WhoAmIRequest {
}

message WhoAmIResponse {
  // Ex: "bheni"
  string username = 1;
  // Ex: "Brian Hendriks"
  string display_name = 2;
  // Ex: "brian@liquidata.co"
  string email_address = 3;
}
